<resources>
    <string name="app_name">Ivory</string>
    <string name="main_activity_label">Home</string>
    <string name="no_registered_number">Não há nenhum número cadastrado...</string>
    <string name="press_back_again">Pressione o botão voltar novamente para sair</string>
    <string name="notifications_hint">Notificações</string>
    <string name="my_numbers">Meus números</string>
    <string name="numbers_prefix">Números de @</string>
    <string name="numbers_suffix"></string>
    <string name="official_numbers">Números oficiais</string>
    <string name="removed_number">Número removido</string>
    <string name="search_user">Procurar por usuário...</string>
    <string name="edit">Editar</string>
    <string name="list_refreshed">Lista atualizada</string>
    <string name="search_activity_label">Pesquisar</string>
    <string name="search_no_results">Sem resultados</string>
    <string name="title_about">Ivory\nServiço Anti-Spam</string>
    <string name="description_about">O Ivory possui uma incrível rede com a capacidade de dizimar spammers de
        celular, como companhias bancárias, prisioneiros, golpistas e chantagistas.
    </string>
    <string name="title_permissions">Conceda as permissões</string>
    <string name="description_permissions">Nos dê as permissões para podermos botar pra quebrar! Não iremos requisitar informações
        desnecessárias ou invasivas.
    </string>
    <string name="grant_permissions">Conceder permissões</string>
    <string name="granted_permissions">Permissões concedidas</string>
    <string name="rationale_phone_state">Sem essa permissão, seremos incapazes de interceptar as ligações para
        ignorá-las ou silenciá-las.
    </string>
    <string name="rationale_sms">Sem essa permissão, seremos incapazes de interceptar as mensagens para silenciá-las.
    </string>
    <string name="rationale_contacts">Sem essa permissão, seremos incapazes de criar uma lista de amizade a partir de
        seus contatos.
    </string>
    <string name="all_permissions_required">Você deve conceder todas as permissões antes de prosseguir</string>
    <string name="title_login">Entre com uma rede social</string>
    <string name="continue_with_facebook">Continuar com o Facebook</string>
    <string name="continue_with_google">Continuar com o Google</string>
    <string name="continue_with_twitter">Continuar com o Twitter</string>
    <string name="sign_in_error">Falha no login</string>
    <string name="sign_in_error_unknown_request_code">: o código recebido da activity é desconhecido</string>
    <string name="sign_in_error_empty_id">: nenhum ID foi recebido</string>
    <string name="something_went_wrong">Algo deu errado…</string>
    <string name="already_registered_title">Deseja pular os formulários?</string>
    <string name="already_registered_description">Parece que você se cadastrou no Ivory anteriormente. Deseja pular os formulários e seguir para o aplicativo?</string>
    <string name="title_username">Digite o seu nome de usuário</string>
    <string name="description_username">Seus amigos poderão usar esse nome para te encontrar no Ivory</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="already_exists_username">O nome de usuário já existe</string>
    <string name="title_phone">Registre seu número</string>
    <string name="country_code_error">O código não corresponde ao de nenhum país</string>
    <string name="area_code_error">O código não corresponde ao de nenhuma área</string>
    <string name="empty_input_error">Campo vazio</string>
    <string name="empty_inputs_error">Campos vazios</string>
    <string name="invalid_number">Número inválido, tente novamente</string>
    <string name="confirmation_dialog_title">Você tem certeza?</string>
    <string name="confirmation_dialog_content">O número está correto. Deseja prosseguir?</string>
    <string name="message_sending_error">Erro ao enviar a mensagem de confirmação, tente novamente</string>
    <string name="title_confirmation">Digite o código recebido por SMS</string>
    <string name="invalid_code_error">Código inválido, tente novamente</string>
    <string name="title_ready">Tudo pronto!</string>
    <string name="description_ready">Nosso guia rápido o mostrará como as coisas funcionam por aqui.
        Não se esqueça de dar uma passada na tela de ajustes para melhorar a sua experiência por
        meio de configurações.
    </string>
    <string name="begin">Começar</string>
    <string name="facebook_app_name">Ivory</string>
    <string name="facebook_app_id">136901597012872</string>
    <string name="fb_login_protocol_scheme">fb136901597012872</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">BXM28B3SNTKx2PT9asQ75RcQU</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">G2S5ZzbzBsMf3qqUxivufEOGlzWtFxRu4ZWyAPMIQQmWjtb7Hm</string>
    <string name="settings_activity_label">Ajustes</string>
    <string name="select_theme_colors">Cores do tema</string>
    <string name="set_dark_theme">Tema escuro (em breve)</string>
    <string name="set_dark_theme_substring">Aplicar um tema escuro no aplicativo</string>
    <string name="advice">Aviso:</string>
    <string name="select_accent_color_advice_content">Alguns elementos ainda não são suportados e a interface
    pode parecer instável</string>
    <string name="select_accent_color">Cor de expressão</string>
    <string name="select_accent_color_substring">Selecionar a cor de expressão do tema escolhido</string>
    <string name="restore_default_colors">Cor padrão</string>
    <string name="restore_default_colors_substring">Restaurar a cor de expressão definida por padrão do tema escolhido
    </string>
    <string name="restore_default_colors_dialog">Restaurar a cor padrão</string>
    <string name="restore_default_colors_dialog_substring">Tem certeza que deseja restaurar a cor padrão?</string>
    <string name="select_database_options">Banco de dados</string>
    <string name="select_database_network">Redes para atualizações</string>
    <string name="select_database_network_substring">Selecionar as redes nas quais o aplicativo fará o download de
        atualizações do banco de dados
    </string>
    <string-array name="network_list_titles">
        <item>Wi-Fi</item>
        <item>Dados móveis</item>
    </string-array>
    <string-array name="network_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="select_block_calls_options">Bloqueio e chamadas</string>
    <string name="select_services_block">Serviços que bloquearão</string>
    <string name="select_services_block_substring">Selecionar os serviços que farão uso da função de bloqueio do
        aplicativo
    </string>
    <string-array name="service_list_titles">
        <item>Ligações</item>
        <item>Mensagens</item>
    </string-array>
    <string-array name="service_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="select_suspicious_treatment">Tratamento de números suspeitos</string>
    <string name="select_suspicious_treatment_substring">Selecionar o que o aplicativo deverá fazer ao receber ligações
        ou mensagens de números com determinados tipos de denúncia
    </string>
    <string name="select_suspicious_treatment_help">Pois bem, além da polícia federal, ninguém gostaria de receber uma
        ligação de falso sequestro, mas algumas pessoas não se importam com ofertas de bancos e operadoras, conseguindo
        até fazer bom uso delas.
    </string>
    <string-array name="treatment_list_titles">
        <item>Não fazer nada</item>
        <item>Silenciar</item>
        <item>Bloquear</item>
    </string-array>
    <string-array name="treatment_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="description_list_titles">
        <item>Companhia bancária</item>
        <item>Telemarketing</item>
        <item>Oferta utópica</item>
        <item>Oferta indesejada</item>
        <item>Oferta repetitiva</item>
        <item>Prisioneiro</item>
        <item>Golpe</item>
        <item>Chantagem</item>
        <item>Questões pessoais</item>
    </string-array>
    <string-array name="description_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="select_feedback_options">Feedback pós-chamada</string>
    <string name="select_feedback_options_substring">Selecionar se quer ou não que apareça a tela de feedback
        pós-chamadas ou em quais situações ela deve aparecer
    </string>
    <string name="select_denunciation_amount">Quantidade de denúncias para ser suspeito</string>
    <string name="select_denunciation_amount_substring">Selecionar a quantidade de denúncias que um número deve ter para
        ser considerado suspeito pelo aplicativo
    </string>
    <string name="select_denunciation_amount_help">Essa informação será usada para otimizar sua experiência com as duas
        configurações acima. O valor padrão pode mudar conforme o aplicativo for atualizado.
    </string>
    <string name="restore_default_denunciation">Padrão</string>
    <string name="add_number_activity_label">Adicionar número</string>
    <string name="add_manually">Adicionar manualmente</string>
    <string name="add_call_history">Adicionar a partir do histórico de chamadas</string>
    <string name="unknown">Desconhecido</string>
    <string name="number_already_added">Esse número já está na sua lista bloqueio. Deseja sobrescrevê-lo?</string>
    <string name="adding_number">Adicionando o número</string>
    <string name="adding_numbers">Adicionando os números</string>
    <string name="please_wait">Por favor, espere...</string>
    <string name="adding_number_error">Erro ao adicionar o número</string>
    <string name="selected">\u0020selecionado</string>
    <string name="selected_plural">\u0020selecionados</string>
    <string name="connecting">Conectando-se...</string>
    <string name="no_internet_connection">Sem conexão à internet</string>
    <string name="try_again">Tentar novamente</string>
    <string name="profile_activity_label">Meu perfil</string>
    <string name="profile_follow">Seguir</string>
    <string name="profile_adding_following">Adicionando à lista dos seguidos</string>
    <string name="profile_unfollow">Deixar de seguir</string>
    <string name="profile_remove_following">Removendo da lista de seguidos</string>
    <string name="profile_delete_account">Deletar conta</string>
    <string name="profile_deleting_account">Deletando sua conta</string>
    <string name="profile_signed_via_google">Logado via Google</string>
    <string name="profile_signed_via_facebook">Logado via Facebook</string>
    <string name="profile_signed_via_twitter">Logado via Twitter</string>
    <string name="profile_error_user_pic">Não foi possível baixar a foto do usuário</string>
    <string name="profile_error_add_user">Não foi possível seguir o usuário</string>
    <string name="profile_error_remove_user">Não foi possível deixar de seguir o usuário</string>
    <string name="profile_error_loading_user">Não foi possível carregar os dados corretamente</string>
    <string name="profile_followers">Seguidores</string>
    <string name="profile_following">Seguindo</string>
    <string name="profile_delete_account_title">Você tem certeza?</string>
    <string name="profile_delete_account_description">Todos os seus dados serão deletados e você não poderá recuperá-los...</string>
    <string name="profile_delete_account_error_title">Erro ao deletar sua conta</string>
    <string name="cancel_button">Cancelar</string>
    <string name="done_button">Pronto</string>
</resources>